Updated and added all the codes

--- a/Quantum State Tomography.ipynb
+++ b/Quantum State Tomography.ipynb
@@ -282,22 +282,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Qibo 0.2.9|INFO|2024-08-02 11:24:13]: Using numpy backend on /CPU:0\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Real density matrix:\n",
-      "[[ 0.27233844-1.08420217e-19j -0.07885349+8.75155075e-02j\n",
-      "  -0.11319419+1.27411414e-01j -0.39400402-2.75908934e-03j]\n",
-      " [-0.07885349-8.75155075e-02j  0.05095438-2.24971951e-18j\n",
-      "   0.07371795-5.16224201e-04j  0.11319419+1.27411414e-01j]\n",
-      " [-0.11319419-1.27411414e-01j  0.07371795+5.16224201e-04j\n",
-      "   0.10665624-4.71627945e-18j  0.16247221+1.85478490e-01j]\n",
-      " [-0.39400402+2.75908934e-03j  0.11319419-1.27411414e-01j\n",
-      "   0.16247221-1.85478490e-01j  0.57005094+0.00000000e+00j]]\n",
+      "[[ 8.17384857e-01-5.55111512e-17j -2.48602824e-03-5.67311974e-03j\n",
+      "  -2.48169470e-03+1.55231663e-03j  5.61812989e-02-3.82182654e-01j]\n",
+      " [-2.48602824e-03+5.67311974e-03j  4.69358145e-05-3.38813179e-21j\n",
+      "  -3.22603851e-06-2.19456649e-05j  2.48169470e-03+1.55231663e-03j]\n",
+      " [-2.48169470e-03-1.55231663e-03j -3.22603851e-06+2.19456649e-05j\n",
+      "   1.04828165e-05-8.47032947e-22j -8.96387198e-04+1.05366462e-03j]\n",
+      " [ 5.61812989e-02+3.82182654e-01j  2.48169470e-03-1.55231663e-03j\n",
+      "  -8.96387198e-04-1.05366462e-03j  1.82557725e-01+1.38777878e-17j]]\n",
       "q0: ─RY─RZ─o───────X─\n",
       "q1: ───────X─RY─RZ─o─\n"
      ]
@@ -306,22 +313,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Qibo 0.2.9|WARNING|2024-07-25 16:29:44]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
+      "[Qibo 0.2.9|WARNING|2024-08-02 11:24:14]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.2723185+0.j        -0.0789855+0.087658j  -0.1128945+0.1274605j\n",
-      "  -0.393752 -0.002808j ]\n",
-      " [-0.0789855-0.087658j   0.0510425+0.j         0.074118 -0.00137j\n",
-      "   0.1132115+0.1270925j]\n",
-      " [-0.1128945-0.1274605j  0.074118 +0.00137j    0.1068795+0.j\n",
-      "   0.1621445+0.185244j ]\n",
-      " [-0.393752 +0.002808j   0.1132115-0.1270925j  0.1621445-0.185244j\n",
-      "   0.5697595+0.j       ]]\n",
-      "Fidelity =  (0.9994378723739814-3.469446951953614e-18j)\n"
+      "[[ 8.17727e-01+0.00000e+00j -2.28050e-03-5.77250e-03j\n",
+      "  -2.29400e-03+2.05650e-03j  5.57995e-02-3.82582e-01j]\n",
+      " [-2.28050e-03+5.77250e-03j  1.99000e-04+0.00000e+00j\n",
+      "   6.65000e-05+1.13000e-04j  2.84200e-03+1.30250e-03j]\n",
+      " [-2.29400e-03-2.05650e-03j  6.65000e-05-1.13000e-04j\n",
+      "  -1.42000e-04+0.00000e+00j -1.03950e-03+1.29850e-03j]\n",
+      " [ 5.57995e-02+3.82582e-01j  2.84200e-03-1.30250e-03j\n",
+      "  -1.03950e-03-1.29850e-03j  1.82216e-01+0.00000e+00j]]\n",
+      "Fidelity =  (1.0004821481600734-4.301572119336239e-17j)\n"
      ]
     }
    ],
@@ -438,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
