--- a/ALSO-graphics.ipynb
+++ b/ALSO-graphics.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 170\u001b[0m\n\u001b[0;32m    166\u001b[0m         file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdatos/infidelity_vs_iterations_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(num_qubits) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    168\u001b[0m     file\u001b[38;5;241m.\u001b[39mclose()\n\u001b[1;32m--> 170\u001b[0m \u001b[43minfidelity_vs_iterations\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[2], line 147\u001b[0m, in \u001b[0;36minfidelity_vs_iterations\u001b[1;34m(num_qubits, depth, iterations)\u001b[0m\n\u001b[0;32m    144\u001b[0m rho \u001b[38;5;241m=\u001b[39m c()\u001b[38;5;241m.\u001b[39mstate()\n\u001b[0;32m    146\u001b[0m \u001b[38;5;66;03m#Generation of the classical shadow and reduced shadows\u001b[39;00m\n\u001b[1;32m--> 147\u001b[0m shadow \u001b[38;5;241m=\u001b[39m \u001b[43mcalculate_classical_shadow\u001b[49m\u001b[43m(\u001b[49m\u001b[43mc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mshadow_bound\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobservables\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnum_qubits\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    148\u001b[0m reduced_shadows \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros(num_qubits, dtype \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mndarray)\n\u001b[0;32m    149\u001b[0m T \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msize(shadow, axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[2], line 25\u001b[0m, in \u001b[0;36mcalculate_classical_shadow\u001b[1;34m(circuit, shadow_size, num_qubits)\u001b[0m\n\u001b[0;32m     23\u001b[0m     c \u001b[38;5;241m=\u001b[39m circuit\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m     24\u001b[0m     c\u001b[38;5;241m.\u001b[39madd(gates\u001b[38;5;241m.\u001b[39mM(\u001b[38;5;241m*\u001b[39m\u001b[38;5;28mrange\u001b[39m(num_qubits), basis \u001b[38;5;241m=\u001b[39m [Pauli[measurement_basis[i][j]] \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_qubits)]))\n\u001b[1;32m---> 25\u001b[0m     outcomes[i] \u001b[38;5;241m=\u001b[39m \u001b[43mc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnshots\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39msamples(binary \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m)[\u001b[38;5;241m0\u001b[39m]\n\u001b[0;32m     27\u001b[0m \u001b[38;5;66;03m# Possible states in matrix form\u001b[39;00m\n\u001b[0;32m     28\u001b[0m states \u001b[38;5;241m=\u001b[39m [np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m0\u001b[39m],[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m]]), np\u001b[38;5;241m.\u001b[39marray([[\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m0\u001b[39m], [\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m]])]\n",
+      "File \u001b[1;32mc:\\Users\\alvar\\miniconda3\\envs\\shadow2\\lib\\site-packages\\qibo\\models\\circuit.py:1119\u001b[0m, in \u001b[0;36mCircuit.__call__\u001b[1;34m(self, initial_state, nshots)\u001b[0m\n\u001b[0;32m   1117\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\u001b[38;5;28mself\u001b[39m, initial_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m, nshots\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m):\n\u001b[0;32m   1118\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Equivalent to ``circuit.execute``.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1119\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43minitial_state\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43minitial_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnshots\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mnshots\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\alvar\\miniconda3\\envs\\shadow2\\lib\\site-packages\\qibo\\models\\circuit.py:1115\u001b[0m, in \u001b[0;36mCircuit.execute\u001b[1;34m(self, initial_state, nshots)\u001b[0m\n\u001b[0;32m   1111\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m GlobalBackend()\u001b[38;5;241m.\u001b[39mexecute_distributed_circuit(\n\u001b[0;32m   1112\u001b[0m         \u001b[38;5;28mself\u001b[39m, initial_state, nshots\n\u001b[0;32m   1113\u001b[0m     )\n\u001b[0;32m   1114\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1115\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mGlobalBackend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute_circuit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnshots\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\alvar\\miniconda3\\envs\\shadow2\\lib\\site-packages\\qibo\\backends\\numpy.py:420\u001b[0m, in \u001b[0;36mNumpyBackend.execute_circuit\u001b[1;34m(self, circuit, initial_state, nshots)\u001b[0m\n\u001b[0;32m    417\u001b[0m         state \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcast(initial_state)\n\u001b[0;32m    419\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m gate \u001b[38;5;129;01min\u001b[39;00m circuit\u001b[38;5;241m.\u001b[39mqueue:\n\u001b[1;32m--> 420\u001b[0m         state \u001b[38;5;241m=\u001b[39m \u001b[43mgate\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mapply_density_matrix\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstate\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnqubits\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    422\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    423\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m initial_state \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numpy.linalg import norm\n",
@@ -101,7 +118,8 @@
     "\n",
     "def infidelity_vs_shadow_size(num_qubits, depth, iterations):\n",
     "\n",
-    "    \n",
+    "    global file \n",
+    "\n",
     "    file = open(\"datos/infidelity_vs_shadow_size_\" + str(num_qubits) + \"8.txt\", 'a')\n",
     "\n",
     "    for _ in range(iterations):\n",
@@ -137,6 +155,7 @@
     "\n",
     "def infidelity_vs_iterations(num_qubits, depth, iterations):\n",
     "    \n",
+    "    global file \n",
     "\n",
     "    file = open(\"datos/infidelity_vs_iterations_\" + str(num_qubits) + \".txt\", 'a')\n",
     "        \n",
